--- a/readme.org
+++ b/readme.org
@@ -4,26 +4,34 @@
 * Installation
   #+BEGIN_SRC sh
     sudo apt-get install python-pip python-dev python-setuptools
-    sudo apt-get install libtiff5-dev libjpeg8-dev zlib1g-dev libfreetype6-dev liblcms2-dev libwebp-dev tcl8.6-dev tk8.6-dev python-tk
+    sudo apt-get install libtiff5-dev libjpeg8-dev zlib1g-dev 
+    sudo apt-get install libfreetype6-dev liblcms2-dev libwebp-dev 
+    sudo apt-get install tcl8.6-dev tk8.6-dev python-tk
     sudo pip install scrapy service_identity
   #+END_SRC
 
 * Usage
 ** settings delay each request
-edit imgrabber/settings.py
+edit =imgrabber/settings.py=
+
 ubah bagian DOWNLOAD_DELAY = seconds
+
 jika diisi 0 berarti no delay alias kemaruk ndang rampung.
 
 ** filter images size:
 IMAGES_MIN_HEIGHT = min. tinggi
+
 IMAGES_MIN_WIDTH = min. lebar
 
 ** setting target
 edit imgrabber/spiders/wp_spiders.py
+
 cari baris =target= (line 12), ganti dengan url target
 
 kemudian =start_urls= untuk membatasi agar scrapy tidak meng-crawl
+
 url yang tidak perlu (gak ada image)
 
 settingan wp default, maka nilainya adalah =wp-content/uploads/=
+
 ini berarti hanya akan mencari di folder tersebut dan turunananya.
